Add twitter user id field to tweets. Fix typo in tweet model.

--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :tw_id %>
+    <%= form.label "Tweet ID" %>
     <%= form.text_field :tw_id, id: :tweet_tw_id %>
   </div>
 
@@ -37,7 +37,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :data_set_twuser_id %>
+    <%= form.label "Data Set Tweeter ID" %>
     <%= form.text_field :data_set_twuser_id, id: :tweet_data_set_twuser_id %>
   </div>
 
@@ -47,8 +47,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :tweeter %>
-    <%= form.text_field :tweeter, id: :tweet_tweeter %>
+    <%= form.label "Twitter user ID" %>
+    <%= form.text_field :twuser_id, id: :tweet_twuser_id %>
   </div>
 
   <div class="actions">
