--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -51,6 +51,11 @@
     <%= form.text_field :twuser_id, id: :tweet_twuser_id %>
   </div>
 
+  <div class="field">
++    <%= form.label :tweeter %>
++    <%= form.text_field :tweeter, id: :tweet_tweeter %>
++  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
